chore: Phase 8 step 1 - externalize config for production